# Agentic-3D

./: LICENSE  README.md
agentic3d/: .gitignore  README.md  pyproject.toml  requirements.txt
agentic3d/models/workflow_14/: workflow_14_scene_0.scad  workflow_14_scene_1.scad  workflow_14_scene_10.scad  workflow_14_scene_2.scad  workflow_14_scene_3.scad  workflow_14_scene_4.scad  workflow_14_scene_5.scad  workflow_14_scene_6.scad  workflow_14_scene_7.scad  workflow_14_scene_8.scad  workflow_14_scene_9.scad
agentic3d/models/workflow_direct_test/: workflow_direct_test_scene_0.scad  workflow_direct_test_scene_1.scad  workflow_direct_test_scene_10.scad  workflow_direct_test_scene_2.scad  workflow_direct_test_scene_3.scad  workflow_direct_test_scene_4.scad  workflow_direct_test_scene_5.scad  workflow_direct_test_scene_6.scad  workflow_direct_test_scene_7.scad  workflow_direct_test_scene_8.scad  workflow_direct_test_scene_9.scad
agentic3d/models/workflow_print3d_test/: workflow_print3d_test_scene_0.scad  workflow_print3d_test_scene_1.scad  workflow_print3d_test_scene_10.scad  workflow_print3d_test_scene_2.scad  workflow_print3d_test_scene_3.scad  workflow_print3d_test_scene_4.scad  workflow_print3d_test_scene_5.scad  workflow_print3d_test_scene_6.scad  workflow_print3d_test_scene_7.scad  workflow_print3d_test_scene_8.scad  workflow_print3d_test_scene_9.scad
agentic3d/notebooks/: evaluation.ipynb  histories.txt  interface.ipynb
agentic3d/src/agentic3d/: _constants.py  agents.py  evaluator.py  prompter.py  utils.py  workflow.py
